package com.googlecode.mobilityrpc.protocol.protobuf;
import "component_request_identifier.proto";

message ResourceData {
    // The name of the class or resource requested, as provided by the SessionClassLoader on the local machine
    required string resource_name = 1;
    // The bytecode of the class or binary data of the resource requested
    required bytes resource_data = 2;
}
message ResourceResponse {
    // The requested bytecode or binary resource data
    repeated ResourceData resource_data = 1;

    // The request identifier, copied from the corresponding resource request originally sent by the client
    required RequestIdentifier request_identifier = 4;
}
